--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,8 @@
- *, *::before, *::after {
-     -moz-box-sizing: border-box;
-     -webkit-box-sizing: border-box;
-     box-sizing: border-box;
- }
+*, *::before, *::after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
 html {
     height: 100%; /* makes sure our HTML takes up 100% of the browser window */
     font-size: 100%;
@@ -64,7 +64,10 @@ body {
      margin: 0 auto;
      max-width: 64rem;
  }
- 
+
+.container.narrow {
+     max-width: 56rem;
+}
  
  /* Medium and small screens (640px) */
  @media (min-width: 640px) {
